--- a/Desktop/PIV/sobre.html
+++ b/Desktop/PIV/sobre.html
@@ -42,6 +42,7 @@
                 <li><strong>📈 Investimentos:</strong> Receba sugestões personalizadas e monitore seus ativos em tempo real.</li>
                 <li><strong>📅 Planejamento Financeiro:</strong> Defina metas, organize seu orçamento e acompanhe suas finanças.</li>
                 <li><strong>📰 Notícias Financeiras:</strong> Mantenha-se atualizado com as últimas novidades do mercado, com a curadoria da IA.</li>
+                <li><strong>📊 Análise Financeira:</strong> Visualize gráficos sobre seus gastos e receitas, facilitando o entendimento do seu desempenho financeiro.</li>
                 <li><strong>🤖 Interação com a IA:</strong> Converse com o LIA sempre que precisar de ajuda ou orientação financeira.</li>
             </ul>
         </section>
@@ -57,7 +58,6 @@
             <h2>🔒 Segurança e Privacidade</h2>
             <p>O LIA prioriza a segurança dos seus dados. Todas as informações são criptografadas e protegidas, seguindo as normas de privacidade de dados em vigor.</p>
         </section>
-
     </main>
 
     <!-- Botão flutuante para acessar o chat com a IA -->
