--- a/Desktop/PIV/dashboard.html
+++ b/Desktop/PIV/dashboard.html
@@ -13,15 +13,13 @@
 
     <!-- Cabeçalho -->
     <header class="header">
-        <!-- Logo do sistema -->
         <img src="images/lia.png" alt="Logo LIA" class="logo">
         
-        <!-- Botão de logout -->
         <nav class="nav">
-            <button class="nav-button" style="font-size: 1.2em;" onclick="window.location.href='index.html'">Sair</button>
+            <button class="nav-button" onclick="window.location.href='analise.html'">📊 Análise</button>
+            <button class="nav-button" onclick="window.location.href='index.html'">Sair</button>
         </nav>
     </header>
-
     <!-- Área principal -->
     <main class="main-content">
         <!-- Título principal -->
